fetch the latest email using the current month